--- a/src/app/features/home/map/map.component.scss
+++ b/src/app/features/home/map/map.component.scss
@@ -28,7 +28,7 @@ h2{
       img{
         width: 100px;
         height: 100px;
-        object-fit: fill;
+        object-fit: cover;
       }
 
       &:hover{
