--- a/src/app/features/farmer/farmer-farms/farmer-farms.component.html
+++ b/src/app/features/farmer/farmer-farms/farmer-farms.component.html
@@ -100,7 +100,7 @@
         <label for="telephone">Phone number</label>
         <input type="text" id="telephone" name="telephone" ngModel #telephone="ngModel" pattern="[- +()0-9]{10,12}">
         <div *ngIf="telephone.touched" class="form-validator">
-          <span *ngIf="telephone.errors?.['pattern']">Phone number should correspond "380123546789" format!</span>
+          <span *ngIf="telephone.errors?.['pattern']">Phone number should correspond international country index format!</span>
         </div>
       </div>
 
