feat: add success component and edit errors

--- a/src/app/core/error/error.component.html
+++ b/src/app/core/error/error.component.html
@@ -1,5 +1,7 @@
 <div class="error-container" *ngIf="errorService.error$ | async as error" >
-  <div class="error">Goat's beard! You've got an error: {{ error }}</div>
+  <div class="error" *ngIf="error">
+    <span>Farmer's beard! Someting went wrong.</span>
+  </div>
   
   <button 
   (click)="errorService.close()"
