--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -5,7 +5,7 @@
     <div class="form-group">
       <label for="firstName">First Name</label>
       <input type="text" id="firstName" name="firstName" ngModel #firstName="ngModel" required minlength="3">
-      <div *ngIf="!firstName.touched" class="form-tip">
+      <div class="form-tip">
         <span>Enter your name without spaces</span>
       </div>
       <div *ngIf="firstName.touched" class="form-validator">
@@ -17,7 +17,7 @@
     <div class="form-group">
       <label for="lastName">Last name</label>
       <input type="text" id="lastName" name="lastName" ngModel #lastName="ngModel" required minlength="3">
-      <div *ngIf="!lastName.touched" class="form-tip">
+      <div class="form-tip">
         <span>Enter your last name without spaces</span>
       </div>
       <div *ngIf="lastName.touched" class="form-validator">
@@ -29,6 +29,9 @@
     <div class="form-group">
       <label for="userName">Username</label>
       <input type="text" id="userName" name="userName" ngModel #userName="ngModel" required minlength="3">
+      <div class="form-tip">
+        <span>Enter username</span>
+      </div>
       <div *ngIf="userName.touched" class="form-validator">
         <span *ngIf="userName.errors?.['required']">Username is Required!</span>
         <span *ngIf="userName.errors?.['minlength']">Username  minimum 3 characters are required!</span>
@@ -46,7 +49,7 @@
       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
       required
       >
-      <div *ngIf="!emailAddress.touched" class="form-tip">
+      <div class="form-tip">
         <span>Enter valid email</span>
       </div>
       <div *ngIf="emailAddress.touched" class="form-validator">
@@ -58,7 +61,7 @@
     <div class="form-group">
       <label for="password">Password</label>
       <input type="password" id="password" name="password" ngModel #password="ngModel" required minlength="8" maxlength="10" >
-      <div *ngIf="!password.touched" class="form-tip">
+      <div class="form-tip">
         <span>Create a password with at least one capital letter, number and character for us to secure your account better.</span>
       </div>
       <div *ngIf="password.touched" class="form-validator">
