fix: fix bugs in pop-up messages to delay and minor edits

--- a/src/app/core/error/error.component.scss
+++ b/src/app/core/error/error.component.scss
@@ -2,7 +2,7 @@
 
 .error-container{
   background-color: rgb(255, 209, 209);
-    position: absolute;
+    position: fixed;
     display: flex;
     border-radius: 10px;
     justify-content: center;
