--- a/src/app/core/success/success.component.scss
+++ b/src/app/core/success/success.component.scss
@@ -2,7 +2,7 @@
 
 .success-container{
   background-color: rgb(184, 233, 161);
-    position: absolute;
+    position: fixed;
     display: flex;
     border-radius: 10px;
     justify-content: center;
