--- a/src/app/features/farmer/farmer-farms/farmer-farms.component.scss
+++ b/src/app/features/farmer/farmer-farms/farmer-farms.component.scss
@@ -71,7 +71,10 @@
   font-size: 0.7em;
   color: red;
 }
-
+.form-tip{
+  font-size: 0.7em;
+  color: #777;
+}
 @media (min-width: 1120px){
  
 .farms-scroll{
