--- a/src/app/shared/components/grid/grid-item/grid-item.component.html
+++ b/src/app/shared/components/grid/grid-item/grid-item.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="item-content">
-    <h3 class="item-name" [routerLink]="!item.farmId ? ('/farm/'+item.id) : null " >{{ item.name }}</h3>
+    <h3 class="item-name" [routerLink]="!item.farmId ? ('/farm/'+item.id) : null " [ngClass]="item.userId ? 'farm' : 'product' ">{{ item.name }}</h3>
     <div class="item-description">
       {{ item.description | slice:0:100 }}...
     </div>
