--- a/src/app/shared/components/grid/grid-item/grid-item.component.scss
+++ b/src/app/shared/components/grid/grid-item/grid-item.component.scss
@@ -15,6 +15,12 @@
   &-name {
     margin: 0;
     text-align: start;
+
+    &.farm{
+      color: $limeGreen;
+      cursor: pointer;
+      text-decoration: underline;
+    }
   }
 
   &-farm-name {
@@ -155,4 +161,5 @@
   display: flex;
   gap: 1em;
   flex-direction: column;
+  width: 200px;
 }
