ref: final refactoring

--- a/src/app/core/success/success.component.html
+++ b/src/app/core/success/success.component.html
@@ -1,10 +1,10 @@
-<div class="success-container" *ngIf="successService.success$ |async as success">
+<div class="success-container" *ngIf="success$ | async as success">
   <div class="success">
-    <span>{{success}}</span>
+    <span>{{ success }}</span>
   </div>
-  
-  <button 
-  (click)="successService.close()"
+
+  <button
+  (click)="onClose()"
   class="button-close"
   title="close success"
   >x</button>
